Update pkgdown , etc.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,3 +50,4 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+X-schema.org-keywords: r, terra, ggplot-extension, r-spatial,  rspatial
