--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -3,7 +3,7 @@ url: 'https://dieghernan.github.io/tidyterra'
 figures:
   dpi: 300
   fig.retina: 2
-  
+
 development:
   mode: auto
 
@@ -26,27 +26,8 @@ navbar:
       text: FAQs
       href: 'articles/faqs.html'
     media:
-      text: Other media
-      menu:
-        - text: Blog posts
-        - text: Introducing tidyterra (dieghernan.github.io)
-          href: 'https://dieghernan.github.io/202205_tidyterra/'
-        - text: Hillshade effects (dominicroye.github.io)
-          href: 'https://dominicroye.github.io/en/2022/hillshade-effects/'
-        - text: Plotting drought conditions (michaelpaulschramm.com)
-          href: 'https://michaelpaulschramm.com/posts/2022-07-22-drought/'
-        - text: How to read AMSR2 sea ice data with terra (www.pmassicotte.com)
-          href: 'https://www.pmassicotte.com/posts/2022-08-11-how-to-read-amsr2-seaice-data/'
-        - text: Getting GEBCO Bathymetry Data and glean the power of terra and tidyterra (lugoga.github.io/semba-quarto/)
-          href: 'https://lugoga.github.io/semba-quarto/posts/gebco/'
-        - text: Spatial Data in the mlr3 Ecosystem (mlr-org.com/)
-          href: 'https://mlr-org.com/gallery/technical/2023-02-27-land-cover-classification/index.html'
-        - text: -------
-        - text: Books
-        - text: 'Moraga, Paula. (2023). Spatial Statistics for Data Science: Theory and Practice with R. Chapman & Hall/CRC.'
-          href: 'https://www.paulamoraga.com/book-spatial/'
-        - text: 'Hufkens, K. (2023). A Handful of Pixels, big science using small data. Online'
-          href: 'https://khufkens.github.io/handful_of_pixels/'
+      text: In the wild
+      href: 'articles/wild.html'
     twitter:
       icon: fa-twitter
       href: 'http://twitter.com/dhernangomez'
