--- a/.github/workflows/check-sf-devel.yaml
+++ b/.github/workflows/check-sf-devel.yaml
@@ -9,7 +9,7 @@ on:
     - cron:  '00 12 * * 2,5'
   workflow_dispatch:
 
-name: R-CMD-check-sf-devel
+name: Works with sf-devel
 
 jobs:
   R-CMD-check-sf-devel:
