--- a/.github/workflows/pkgdown-gh-pages.yaml
+++ b/.github/workflows/pkgdown-gh-pages.yaml
@@ -38,5 +38,5 @@ jobs:
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
+          Rscript -e 'pkgdown::deploy_to_branch(clean = TRUE)'
 
