--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ S3method(left_join,SpatVector)
 S3method(mutate,SpatRaster)
 S3method(mutate,SpatVector)
 S3method(n_groups,SpatVector)
+S3method(pivot_longer,SpatVector)
 S3method(pull,SpatRaster)
 S3method(pull,SpatVector)
 S3method(relocate,SpatRaster)
@@ -265,4 +266,5 @@ importFrom(rlang,.data)
 importFrom(terra,as.data.frame)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,drop_na)
+importFrom(tidyr,pivot_longer)
 importFrom(tidyr,replace_na)
