Add pivot wider

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ S3method(mutate,SpatRaster)
 S3method(mutate,SpatVector)
 S3method(n_groups,SpatVector)
 S3method(pivot_longer,SpatVector)
+S3method(pivot_wider,SpatVector)
 S3method(pull,SpatRaster)
 S3method(pull,SpatVector)
 S3method(relocate,SpatRaster)
@@ -267,4 +268,5 @@ importFrom(terra,as.data.frame)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
