--- a/NAMESPACE
+++ b/NAMESPACE
@@ -266,6 +266,7 @@ importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(terra,as.data.frame)
 importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
