--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: 'https://dieghernan.github.io/tidyterra'
+url: https://dieghernan.github.io/tidyterra
 
 figures:
   dpi: 300
@@ -10,27 +10,27 @@ development:
 navbar:
   structure:
     left:
-      - intro
-      - reference
-      - articles
-      - faqs
-      - tutorials
-      - media
-      - news
+    - intro
+    - reference
+    - articles
+    - faqs
+    - tutorials
+    - media
+    - news
     right:
-      - search
-      - twitter
-      - github
+    - search
+    - twitter
+    - github
   components:
     faqs:
       text: FAQs
-      href: 'articles/faqs.html'
+      href: articles/faqs.html
     media:
       text: In the wild
-      href: 'articles/wild.html'
+      href: articles/wild.html
     twitter:
       icon: fa-twitter
-      href: 'http://twitter.com/dhernangomez'
+      href: http://twitter.com/dhernangomez
       aria-label: Twitter
 
 template:
@@ -41,79 +41,63 @@ template:
     twitter:
       creator: '@dhernangomez'
       card: summary_large_image
+
 reference:
-- title: "tibble methods"
-  desc:  Methods from {tibble} implemented for Spat* objects.
-  contents:
-    - has_concept("tibble.methods")
-- title: "dplyr methods"
-  desc:  Methods from {dplyr} implemented for Spat* objects.
+- title: tibble methods
+  desc: Methods from {tibble} implemented for Spat* objects.
+  contents: has_concept("tibble.methods")
+- title: dplyr methods
+  desc: Methods from {dplyr} implemented for Spat* objects.
 - subtitle: Rows
-  desc: >
+  desc: |
     Verbs that principally operate on rows.
-  contents:
-  - has_concept("dplyr.rows")
+  contents: has_concept("dplyr.rows")
 - subtitle: Columns
-  desc: >
+  desc: |
     Verbs that principally operate on columns.
-  contents:
-  - has_concept("dplyr.cols")
+  contents: has_concept("dplyr.cols")
 - subtitle: Groups
-  desc: >
+  desc: |
     Verbs that principally operate on groups of rows.
-  contents:
-  - has_concept("dplyr.groups")
+  contents: has_concept("dplyr.groups")
 - subtitle: Spat* and Data frames
-  desc: >
+  desc: |
     Verbs that principally operate on pairs of Spat* and data frames.
-  contents:
-  - has_concept("dplyr.pairs")
-- title: "tidyr methods"
-  desc:  Methods from {tidyr} implemented for Spat* objects.
+  contents: has_concept("dplyr.pairs")
+- title: tidyr methods
+  desc: Methods from {tidyr} implemented for Spat* objects.
 - subtitle: Missing values
   description: |
     Tools for converting between implicit (absent rows) and explicit (`NA`)
     missing values, handling explicit `NA`s.
-  contents:
-  - drop_na.SpatVector
-  - replace_na.Spat
+  contents: has_concept("tidyr.missing")
 - subtitle: Pivoting
   description: |
     Pivoting changes the representation of a rectangular Spat* object, without
     changing the data inside of it..
-  contents:
-    - starts_with("pivot_")
-- title: "ggplot2 methods"
-  desc:  Methods from {ggplot2} implemented for Spat* objects.
-  contents:
-    - has_concept("ggplot2.methods")
-
-- title: "ggplot2 utils"
+  contents: has_concept("tidyr.pivot")
+- title: ggplot2 methods
+  desc: Methods from {ggplot2} implemented for Spat* objects.
+  contents: has_concept("ggplot2.methods")
+- title: ggplot2 utils
 - subtitle: Geoms
-  desc:  Create {ggplot2} layers for Spat* objects.
-  contents:
-    - starts_with("geom_")
+  desc: Create {ggplot2} layers for Spat* objects.
+  contents: starts_with("geom_")
 - subtitle: Scales
   desc: Gradient colour schemes, palettes and hypsometric tints.
-  contents:
-    - starts_with("scale_")
-- title: "Helpers"
-  desc:  Additional set of functions provided by {tidyterra}.
-- subtitle: "Coercing objects"
-  desc:  Convert Spat* to other type of objects or create SpatRasters from tibbles.
-  contents:
-   - has_concept("coerce")
-- subtitle: "Other helpers"
-  contents:
-    - has_concept("helpers")
+  contents: starts_with("scale_")
+- title: Helpers
+  desc: Additional set of functions provided by {tidyterra}.
+- subtitle: Coercing objects
+  desc: Convert Spat* to other type of objects or create SpatRasters from tibbles.
+  contents: has_concept("coerce")
+- subtitle: Other helpers
+  contents: has_concept("helpers")
 - title: Built in data
-  contents:
-  - has_concept("datasets")
-- title: "About the package"
-  contents:
-    - tidyterra-package
+  contents: has_concept("datasets")
+- title: About the package
+  contents: tidyterra-package
 
 authors:
   Diego Hernangómez:
     href: https://dieghernan.github.io/
-
