Add pivot methods (#133)
* Add pivot_longer

* Fix tests

* Add pivot wider

* Update docs with pkgdev

* Update docs

* Update docs with pkgdev

* Improve pivoting

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Diego H <dieghernan@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,8 @@ S3method(left_join,SpatVector)
 S3method(mutate,SpatRaster)
 S3method(mutate,SpatVector)
 S3method(n_groups,SpatVector)
+S3method(pivot_longer,SpatVector)
+S3method(pivot_wider,SpatVector)
 S3method(pull,SpatRaster)
 S3method(pull,SpatVector)
 S3method(relocate,SpatRaster)
@@ -264,5 +266,8 @@ importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(terra,as.data.frame)
 importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
