Add fill method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(count,SpatVector)
 S3method(distinct,SpatVector)
 S3method(drop_na,SpatRaster)
 S3method(drop_na,SpatVector)
+S3method(fill,SpatVector)
 S3method(filter,SpatRaster)
 S3method(filter,SpatVector)
 S3method(fortify,SpatRaster)
@@ -89,6 +90,7 @@ export(cross_blended.colors)
 export(cross_blended.colors2)
 export(distinct)
 export(drop_na)
+export(fill)
 export(filter)
 export(fortify)
 export(full_join)
@@ -118,6 +120,8 @@ export(is_regular_grid)
 export(left_join)
 export(mutate)
 export(n_groups)
+export(pivot_longer)
+export(pivot_wider)
 export(pull)
 export(pull_crs)
 export(relocate)
@@ -268,6 +272,7 @@ importFrom(terra,as.data.frame)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
+importFrom(tidyr,fill)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
