--- a/NAMESPACE
+++ b/NAMESPACE
@@ -264,6 +264,7 @@ importFrom(ggplot2,alpha)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,fortify)
 importFrom(grDevices,col2rgb)
+importFrom(grDevices,grey)
 importFrom(grDevices,rgb)
 importFrom(grDevices,terrain.colors)
 importFrom(magrittr,"%>%")
