Update docs up to join

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ S3method(transmute,SpatVector)
 S3method(ungroup,SpatVector)
 export("%>%")
 export(aes)
+export(after_stat)
 export(anti_join)
 export(arrange)
 export(as_coordinates)
