--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,7 @@ VignetteBuilder:
     knitr
 Config/Needs/coverage: covr
 Config/Needs/website: geodata, metR, dieghernan/gitdevr, ragg, styler,
-    Nowosad/spDataLarge, ggspatial
+    Nowosad/spDataLarge, ggspatial, cpp11
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
