--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -10,17 +10,17 @@ development:
 navbar:
   structure:
     left:
-    - intro
-    - reference
-    - articles
-    - faqs
-    - tutorials
-    - media
-    - news
+      - intro
+      - reference
+      - articles
+      - faqs
+      - tutorials
+      - media
+      - news
     right:
-    - search
-    - twitter
-    - github
+      - search
+      - twitter
+      - github
   components:
     faqs:
       text: FAQs
@@ -39,73 +39,94 @@ template:
     ganalytics: G-KRDM62G8K4
   opengraph:
     twitter:
-      creator: '@dhernangomez'
+      creator: "@dhernangomez"
       card: summary_large_image
 
 reference:
-- title: '**tibble** methods'
-  desc: Methods from **tibble** implemented for `Spat*` objects.
-  contents: has_concept("tibble.methods")
+  - title: "**tibble** methods"
+    desc: >
+      Methods from <a href="https://CRAN.R-project.org/package=tibble"
+      class="external-link"><span class="pkg">tibble</span></a> implemented for
+      `Spat*` objects.
+    contents: has_concept("tibble.methods")
 
-- title: dplyr methods
-  desc: Methods from **dplyr** implemented for `Spat*` objects.
-- subtitle: Rows
-  desc: |
-    Verbs that principally operate on rows.
-  contents: has_concept("dplyr.rows")
-- subtitle: Columns
-  desc: |
-    Verbs that principally operate on columns.
-  contents: has_concept("dplyr.cols")
-- subtitle: Groups
-  desc: |
-    Verbs that principally operate on groups of rows.
-  contents: has_concept("dplyr.groups")
-- subtitle: '`SpatVector` and Data frames'
-  desc: |
-    Verbs that principally operate on pairs of `Spat*` and data frames.
-  contents: has_concept("dplyr.pairs")
+  - title: dplyr methods
+    desc: >
+      Methods from <a href="https://CRAN.R-project.org/package=dplyr"
+      class="external-link"><span class="pkg">dplyr</span></a> 
 
-- title: tidyr methods
-  desc: Methods from **tidyr** implemented for `Spat*` objects.
-- subtitle: Pivoting
-  description: |
-    Pivoting changes the representation of a `SpatVector` object, without
-    changing the data inside of it.
-  contents: has_concept("tidyr.pivot")
-- subtitle: Missing values
-  description: |
-    Tools for converting between implicit (absent rows) and explicit (`NA`)
-    missing values, handling explicit `NA`s.
-  contents: has_concept("tidyr.missing")
+      implemented for `Spat*` objects.
+  - subtitle: Rows
+    desc: |
+      Verbs that principally operate on rows.
+    contents: has_concept("dplyr.rows")
+  - subtitle: Columns
+    desc: |
+      Verbs that principally operate on columns.
+    contents: has_concept("dplyr.cols")
+  - subtitle: Groups
+    desc: |
+      Verbs that principally operate on groups of rows.
+    contents: has_concept("dplyr.groups")
+  - subtitle: "`SpatVector` and Data frames"
+    desc: |
+      Verbs that principally operate on pairs of `Spat*` and data frames.
+    contents: has_concept("dplyr.pairs")
 
-- title: ggplot2 methods
-  desc: Methods from **ggplot2** implemented for `Spat*` objects.
-  contents: has_concept("ggplot2.methods")
+  - title: tidyr methods
+    desc: >
+      Methods from <a href="https://CRAN.R-project.org/package=tidyr"
+      class="external-link"><span class="pkg">tidyr</span></a> 
 
-- title: ggplot2 utils
-- subtitle: Geoms
-  desc: Create **ggplot2** layers for `Spat*` objects.
-  contents: starts_with("geom_")
-- subtitle: Scales
-  desc: Gradient colour schemes, palettes and hypsometric tints.
-  contents: starts_with("scale_")
+      implemented for `Spat*` objects.
+  - subtitle: Pivoting
+    description: |
+      Pivoting changes the representation of a `SpatVector` object, without
+      changing the data inside of it.
+    contents: has_concept("tidyr.pivot")
+  - subtitle: Missing values
+    description: |
+      Tools for converting between implicit (absent rows) and explicit (`NA`)
+      missing values, handling explicit `NA`s.
+    contents: has_concept("tidyr.missing")
 
-- title: Helpers
-  desc: Additional set of functions provided by **tidyterra**.
-- subtitle: Coercing objects
-  desc: |
-    Convert Spat* to other type of objects or create `SpatRasters` from tibbles.
-  contents: has_concept("coerce")
-- subtitle: Other helpers
-  contents: has_concept("helpers")
+  - title: ggplot2 methods
+    desc: >
+      Methods from <a href="https://CRAN.R-project.org/package=ggplot2"
+      class="external-link"><span class="pkg">ggplot2</span></a> 
 
-- title: Built in data
-  contents: has_concept("datasets")
-- title: About the package
-  contents: tidyterra-package
+      implemented for `Spat*` objects.
+    contents: has_concept("ggplot2.methods")
+
+  - title: ggplot2 utils
+  - subtitle: Geoms
+    desc: >
+      Create <a href="https://CRAN.R-project.org/package=ggplot2"
+      class="external-link"><span class="pkg">ggplot2</span></a> 
+
+      layers for `Spat*` objects.
+    contents: starts_with("geom_")
+  - subtitle: Scales
+    desc: Gradient colour schemes, palettes and hypsometric tints.
+    contents: starts_with("scale_")
+
+  - title: Helpers
+    desc: >
+      Additional set of functions provided by <a
+      href="https://CRAN.R-project.org/package=tidyterra"class="external-link"><span
+      class="pkg">tidyterra</span></a>.
+  - subtitle: Coercing objects
+    desc: >
+      Convert Spat* to other type of objects or create `SpatRasters` from
+      tibbles.
+    contents: has_concept("coerce")
+  - subtitle: Other helpers
+    contents: has_concept("helpers")
+  - title: Built in data
+    contents: has_concept("datasets")
+  - title: About the package
+    contents: tidyterra-package
 
 authors:
   Diego Hernangómez:
     href: https://dieghernan.github.io/
-
