--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -42,6 +42,10 @@ template:
       creator: "@dhernangomez"
       card: summary_large_image
 
+home:
+  title: >
+    tidyterra | tidyverse methods and ggplot2 functions for terra objects
+
 reference:
   - title: "**tibble** methods"
     desc: >
@@ -54,7 +58,6 @@ reference:
     desc: >
       Methods from <a href="https://CRAN.R-project.org/package=dplyr"
       class="external-link"><span class="pkg">dplyr</span></a> 
-
       implemented for `Spat*` objects.
   - subtitle: Rows
     desc: |
@@ -69,32 +72,31 @@ reference:
       Verbs that principally operate on groups of rows.
     contents: has_concept("dplyr.groups")
   - subtitle: "`SpatVector` and Data frames"
-    desc: |
-      Verbs that principally operate on pairs of `Spat*` and data frames.
+    desc: >
+      Verbs that principally operate on pairs of `Spat*` and 
+      data frames.
     contents: has_concept("dplyr.pairs")
 
   - title: tidyr methods
     desc: >
       Methods from <a href="https://CRAN.R-project.org/package=tidyr"
       class="external-link"><span class="pkg">tidyr</span></a> 
-
       implemented for `Spat*` objects.
   - subtitle: Pivoting
-    description: |
-      Pivoting changes the representation of a `SpatVector` object, without
-      changing the data inside of it.
+    description: >
+      Pivoting changes the representation of a `SpatVector` object, 
+      without changing the data inside of it.
     contents: has_concept("tidyr.pivot")
   - subtitle: Missing values
-    description: |
-      Tools for converting between implicit (absent rows) and explicit (`NA`)
-      missing values, handling explicit `NA`s.
+    description: >
+      Tools for converting between implicit (absent rows) and 
+      explicit (`NA`) missing values, handling explicit `NA`s.
     contents: has_concept("tidyr.missing")
 
   - title: ggplot2 methods
     desc: >
       Methods from <a href="https://CRAN.R-project.org/package=ggplot2"
       class="external-link"><span class="pkg">ggplot2</span></a> 
-
       implemented for `Spat*` objects.
     contents: has_concept("ggplot2.methods")
 
@@ -103,7 +105,6 @@ reference:
     desc: >
       Create <a href="https://CRAN.R-project.org/package=ggplot2"
       class="external-link"><span class="pkg">ggplot2</span></a> 
-
       layers for `Spat*` objects.
     contents: starts_with("geom_")
   - subtitle: Scales
@@ -113,12 +114,12 @@ reference:
   - title: Helpers
     desc: >
       Additional set of functions provided by <a
-      href="https://CRAN.R-project.org/package=tidyterra"class="external-link"><span
-      class="pkg">tidyterra</span></a>.
+      href="https://CRAN.R-project.org/package=tidyterra"
+      class="external-link"><span class="pkg">tidyterra</span></a>.
   - subtitle: Coercing objects
     desc: >
-      Convert Spat* to other type of objects or create `SpatRasters` from
-      tibbles.
+      Convert Spat* to other type of objects or create `SpatRasters` 
+      from tibbles.
     contents: has_concept("coerce")
   - subtitle: Other helpers
     contents: has_concept("helpers")
