--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,7 @@ export(full_join)
 export(geom_spatraster)
 export(geom_spatraster_contour)
 export(geom_spatraster_contour_filled)
+export(geom_spatraster_contour_text)
 export(geom_spatraster_rgb)
 export(geom_spatvector)
 export(geom_spatvector_label)
