--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Imports:
     data.table,
     dplyr (>= 1.0.0),
     ggplot2 (>= 3.5.0),
+    grid,
     magrittr,
     rlang,
     scales,
@@ -45,7 +46,7 @@ Suggests:
 VignetteBuilder: 
     knitr
 Config/Needs/coverage: covr
-Config/Needs/website: geodata, metR, dieghernan/gitdevr, ragg, styler,
+Config/Needs/website: geodata, dieghernan/gitdevr, ragg, styler,
     ggspatial, cpp11, remotes
 Config/testthat/edition: 3
 Config/testthat/parallel: true
