--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ export(geom_spatvector_label)
 export(geom_spatvector_text)
 export(get_coltab_pal)
 export(glimpse)
+export(grass.colors)
 export(group_by)
 export(group_by_drop_default)
 export(group_data)
@@ -139,6 +140,9 @@ export(scale_color_cross_blended_d)
 export(scale_color_cross_blended_tint_b)
 export(scale_color_cross_blended_tint_c)
 export(scale_color_cross_blended_tint_d)
+export(scale_color_grass_b)
+export(scale_color_grass_c)
+export(scale_color_grass_d)
 export(scale_color_hypso_b)
 export(scale_color_hypso_c)
 export(scale_color_hypso_d)
@@ -161,6 +165,9 @@ export(scale_colour_cross_blended_d)
 export(scale_colour_cross_blended_tint_b)
 export(scale_colour_cross_blended_tint_c)
 export(scale_colour_cross_blended_tint_d)
+export(scale_colour_grass_b)
+export(scale_colour_grass_c)
+export(scale_colour_grass_d)
 export(scale_colour_hypso_b)
 export(scale_colour_hypso_c)
 export(scale_colour_hypso_d)
@@ -183,6 +190,9 @@ export(scale_fill_cross_blended_d)
 export(scale_fill_cross_blended_tint_b)
 export(scale_fill_cross_blended_tint_c)
 export(scale_fill_cross_blended_tint_d)
+export(scale_fill_grass_b)
+export(scale_fill_grass_c)
+export(scale_fill_grass_d)
 export(scale_fill_hypso_b)
 export(scale_fill_hypso_c)
 export(scale_fill_hypso_d)
