--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,7 @@ export(mutate)
 export(n_groups)
 export(pivot_longer)
 export(pivot_wider)
+export(princess.colors)
 export(pull)
 export(pull_crs)
 export(relocate)
@@ -149,6 +150,9 @@ export(scale_color_hypso_d)
 export(scale_color_hypso_tint_b)
 export(scale_color_hypso_tint_c)
 export(scale_color_hypso_tint_d)
+export(scale_color_princess_b)
+export(scale_color_princess_c)
+export(scale_color_princess_d)
 export(scale_color_terrain_b)
 export(scale_color_terrain_c)
 export(scale_color_terrain_d)
@@ -174,6 +178,9 @@ export(scale_colour_hypso_d)
 export(scale_colour_hypso_tint_b)
 export(scale_colour_hypso_tint_c)
 export(scale_colour_hypso_tint_d)
+export(scale_colour_princess_b)
+export(scale_colour_princess_c)
+export(scale_colour_princess_d)
 export(scale_colour_terrain_b)
 export(scale_colour_terrain_c)
 export(scale_colour_terrain_d)
@@ -199,6 +206,9 @@ export(scale_fill_hypso_d)
 export(scale_fill_hypso_tint_b)
 export(scale_fill_hypso_tint_c)
 export(scale_fill_hypso_tint_d)
+export(scale_fill_princess_b)
+export(scale_fill_princess_c)
+export(scale_fill_princess_d)
 export(scale_fill_terrain_b)
 export(scale_fill_terrain_c)
 export(scale_fill_terrain_d)
