--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,8 +46,8 @@ Suggests:
 VignetteBuilder: 
     knitr
 Config/Needs/coverage: covr
-Config/Needs/website: rspatial/geodata, dieghernan/gitdevr, ragg, styler,
-    ggspatial, cpp11, remotes
+Config/Needs/website: geodata, dieghernan/gitdevr, ragg, styler,
+    ggspatial, cpp11, remotes, gganimate, gifski
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
