Add support for SpatGraticule

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(drop_na,SpatVector)
 S3method(fill,SpatVector)
 S3method(filter,SpatRaster)
 S3method(filter,SpatVector)
+S3method(fortify,SpatGraticule)
 S3method(fortify,SpatRaster)
 S3method(fortify,SpatVector)
 S3method(full_join,SpatVector)
