--- a/NAMESPACE
+++ b/NAMESPACE
@@ -300,3 +300,4 @@ importFrom(tidyr,fill)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
+importFrom(utils,packageVersion)
