Add new generics methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(drop_na,SpatVector)
 S3method(fill,SpatVector)
 S3method(filter,SpatRaster)
 S3method(filter,SpatVector)
+S3method(fortify,SpatExtent)
 S3method(fortify,SpatGraticule)
 S3method(fortify,SpatRaster)
 S3method(fortify,SpatVector)
@@ -47,6 +48,10 @@ S3method(rename_with,SpatRaster)
 S3method(rename_with,SpatVector)
 S3method(replace_na,SpatRaster)
 S3method(replace_na,SpatVector)
+S3method(required_pkgs,SpatExtent)
+S3method(required_pkgs,SpatGraticule)
+S3method(required_pkgs,SpatRaster)
+S3method(required_pkgs,SpatVector)
 S3method(right_join,SpatVector)
 S3method(rowwise,SpatVector)
 S3method(select,SpatRaster)
@@ -133,6 +138,7 @@ export(relocate)
 export(rename)
 export(rename_with)
 export(replace_na)
+export(required_pkgs)
 export(right_join)
 export(rowwise)
 export(scale_color_coltab)
@@ -281,6 +287,7 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,tally)
 importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
+importFrom(generics,required_pkgs)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,after_stat)
 importFrom(ggplot2,alpha)
