--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Imports:
     cli (>= 3.0.0),
     data.table,
     dplyr (>= 1.0.0),
+    generics,
     ggplot2 (>= 3.5.0),
     magrittr,
     rlang,
