--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -114,6 +114,13 @@ reference:
     desc: Gradient colour schemes, palettes and hypsometric tints.
     contents: starts_with("scale_")
 
+  - title: "**generics** methods"
+    desc: >
+      Methods from <a href="https://CRAN.R-project.org/package=generics"
+      class="external-link"><span class="pkg">generics</span></a> implemented
+      for `Spat*` objects.
+    contents: has_concept("generics.methods")
+
   - title: Helpers
     desc: >
       Additional set of functions provided by <a
