Add tidy methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(as_spatvector,sf)
 S3method(as_spatvector,sfc)
 S3method(as_tibble,SpatRaster)
 S3method(as_tibble,SpatVector)
+S3method(autoplot,SpatExtent)
+S3method(autoplot,SpatGraticule)
 S3method(autoplot,SpatRaster)
 S3method(autoplot,SpatVector)
 S3method(count,SpatVector)
@@ -75,6 +77,10 @@ S3method(slice_tail,SpatVector)
 S3method(summarise,SpatVector)
 S3method(summarize,SpatVector)
 S3method(tally,SpatVector)
+S3method(tidy,SpatExtent)
+S3method(tidy,SpatGraticule)
+S3method(tidy,SpatRaster)
+S3method(tidy,SpatVector)
 S3method(transmute,SpatRaster)
 S3method(transmute,SpatVector)
 S3method(ungroup,SpatVector)
@@ -242,6 +248,7 @@ export(stat_spatvector)
 export(summarise)
 export(summarize)
 export(tally)
+export(tidy)
 export(transmute)
 export(ungroup)
 export(whitebox.colors)
@@ -288,6 +295,7 @@ importFrom(dplyr,tally)
 importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
 importFrom(generics,required_pkgs)
+importFrom(generics,tidy)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,after_stat)
 importFrom(ggplot2,alpha)
