Add glance method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ S3method(fortify,SpatGraticule)
 S3method(fortify,SpatRaster)
 S3method(fortify,SpatVector)
 S3method(full_join,SpatVector)
+S3method(glance,SpatRaster)
+S3method(glance,SpatVector)
 S3method(glimpse,SpatRaster)
 S3method(glimpse,SpatVector)
 S3method(group_by,SpatVector)
@@ -116,6 +118,7 @@ export(geom_spatvector)
 export(geom_spatvector_label)
 export(geom_spatvector_text)
 export(get_coltab_pal)
+export(glance)
 export(glimpse)
 export(grass.colors)
 export(group_by)
@@ -294,6 +297,7 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,tally)
 importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
+importFrom(generics,glance)
 importFrom(generics,required_pkgs)
 importFrom(generics,tidy)
 importFrom(ggplot2,aes)
