Cheat testthat >= 3.3.0 on GHA

--- a/.github/workflows/check-terra-devel.yaml
+++ b/.github/workflows/check-terra-devel.yaml
@@ -59,5 +59,15 @@ jobs:
           cat("terra ", as.character(packageVersion("terra")))
 
         shell: Rscript {0}
+
+      - name: Cheat testthat >= 3.3.0
+        run: |
+          # Cheat testthat >= 3.3.0
+          lns <- readLines(".Rbuildignore")
+          lns_new <- lns[!grepl("_snaps", lns)]
+          writeLines(lns_new, ".Rbuildignore")
+
+        shell: Rscript {0}
+
       - uses: r-lib/actions/check-r-package@v2
 
