--- a/.github/workflows/check-dplyr-readr.yaml
+++ b/.github/workflows/check-dplyr-readr.yaml
@@ -58,5 +58,15 @@ jobs:
           cat("\nreadr ", as.character(packageVersion("readr")))
 
         shell: Rscript {0}
+
+      - name: Cheat testthat >= 3.3.0
+        run: |
+          # Cheat testthat >= 3.3.0
+          lns <- readLines(".Rbuildignore")
+          lns_new <- lns[!grepl("_snaps", lns)]
+          writeLines(lns_new, ".Rbuildignore")
+
+        shell: Rscript {0}
+
       - uses: r-lib/actions/check-r-package@v2
 
