Add permissions to actions

--- a/.github/workflows/check-dplyr-readr.yaml
+++ b/.github/workflows/check-dplyr-readr.yaml
@@ -10,6 +10,8 @@ on:
   workflow_dispatch:
 
 name: dev-version dplyr and readr
+permissions:
+  contents: read
 
 jobs:
   R-CMD-check-dplyr-readr-devel:
