--- a/.github/workflows/pkgdown-gh-pages.yaml
+++ b/.github/workflows/pkgdown-gh-pages.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [main, master]
     tags: ["*"]
-  release:
-    types: [published]
+  schedule:
+    - cron: "20 20 20 * *"
   workflow_dispatch:
 
 name: pkgdown-gh-pages
