--- a/.github/workflows/cran-status-check.yaml
+++ b/.github/workflows/cran-status-check.yaml
@@ -21,5 +21,5 @@ jobs:
     - name: Check
       uses: dieghernan/cran-status-check@v2
       with:
-        fail-on-error: "true"
-        create-issue: "false"
+        fail-on-error: true
+        create-issue: false
