--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -139,3 +139,5 @@ reference:
 authors:
   Diego Hernangómez:
     href: https://dieghernan.github.io/
+  Dewey Dunnington:
+    href: https://dewey.dunnington.ca/
