--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
   "better-yaml.directives": false,
   "better-yaml.flowCollectionPadding": false,
   "better-yaml.lineWidth": 80,
+  "files.eol": "\n",
   "positron.r.pipe": "|>",
   "positron.r.useNativePipe": true,
   "yaml.completion": true,
