Add testing suite for count, tally

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -309,6 +309,7 @@ importFrom(grDevices,col2rgb)
 importFrom(grDevices,grey)
 importFrom(grDevices,rgb)
 importFrom(grDevices,terrain.colors)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(terra,as.data.frame)
