Add filter_out function. TODO: tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ S3method(drop_na,SpatVector)
 S3method(fill,SpatVector)
 S3method(filter,SpatRaster)
 S3method(filter,SpatVector)
+S3method(filter_out,SpatVector)
 S3method(fortify,SpatExtent)
 S3method(fortify,SpatGraticule)
 S3method(fortify,SpatRaster)
@@ -109,6 +110,7 @@ export(distinct)
 export(drop_na)
 export(fill)
 export(filter)
+export(filter_out)
 export(fortify)
 export(full_join)
 export(geom_spatraster)
@@ -266,6 +268,7 @@ importFrom(dplyr,count)
 importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
+importFrom(dplyr,filter_out)
 importFrom(dplyr,full_join)
 importFrom(dplyr,glimpse)
 importFrom(dplyr,group_by)
