--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,13 +40,13 @@ Suggests:
     isoband,
     knitr,
     maptiles,
-    rmarkdown,
+    quarto,
     s2,
     stringi,
     testthat (>= 3.0.0),
     vctrs
 VignetteBuilder:
-    knitr
+    quarto
 Config/Needs/coverage: covr
 Config/Needs/website: geodata, dieghernan/gitdevr, ragg, styler, metR,
     ggspatial, cpp11, remotes, gganimate, gifski
