--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,9 +24,10 @@ Depends:
 Imports:
     cli (>= 3.0.0),
     data.table,
-    dplyr (>= 1.0.0),
+    dplyr (>= 1.2.0),
     generics,
     ggplot2 (>= 4.0.0),
+    lifecycle,
     magrittr,
     rlang,
     scales,
@@ -38,14 +39,14 @@ Suggests:
     hexbin,
     isoband,
     knitr,
-    lifecycle,
     maptiles,
-    rmarkdown,
+    quarto,
     s2,
+    stringi,
     testthat (>= 3.0.0),
     vctrs
 VignetteBuilder:
-    knitr
+    quarto
 Config/Needs/coverage: covr
 Config/Needs/website: geodata, dieghernan/gitdevr, ragg, styler, metR,
     ggspatial, cpp11, remotes, gganimate, gifski
