Needs tidyverse here

--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -29,6 +29,7 @@ jobs:
           local::.
           any::rcmdcheck
           dieghernan/pkgdev
+          tidyverse
 
     - name: Install optipng
       run: |
