--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -30,6 +30,7 @@ jobs:
           any::rcmdcheck
           dieghernan/pkgdev
           tidyverse
+        needs: website
 
     - name: Install optipng
       run: |
